add bool type to Book Struct
