# docs/swagger.json
@@ -160,11 +160,15 @@
             "type": "object",
             "required": [
                 "author",
+                "isEnable",
                 "title"
             ],
             "properties": {
                 "author": {
                     "type": "string"
+                },
+                "isEnable": {
+                    "type": "boolean"
                 },
                 "title": {
                     "type": "string"
@@ -189,9 +193,15 @@
         },
         "models.UpdateBookInput": {
             "type": "object",
+            "required": [
+                "isEnable"
+            ],
             "properties": {
                 "author": {
                     "type": "string"
+                },
+                "isEnable": {
+                    "type": "boolean"
                 },
                 "title": {
                     "type": "string"
