# models/book.go
@@ -4,14 +4,17 @@ type Book struct {
 	ID     uint   `json:"id" gorm:"primary_key"`
 	Title  string `json:"title"`
 	Author string `json:"author"`
+	IsEnable bool `json:"isEnable" binding:"required"`
 }
 
 type CreateBookInput struct {
 	Title  string `json:"title" binding:"required"`
 	Author string `json:"author" binding:"required"`
+	IsEnable bool `json:"isEnable" binding:"required"`
 }
 
 type UpdateBookInput struct {
 	Title  string `json:"title"`
 	Author string `json:"author"`
+	IsEnable bool `json:"isEnable" binding:"required"`
 }
